--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ docs/site/
 # committed for packages, but should be committed for applications that require a static
 # environment.
 Manifest.toml
+.Rproj.user
+
+.DS_Store
+.Rhistory
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+books/
+midterm/
+final/
+hw*sol.*
